<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_informacoes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.course.leonil.prjecoponto.Informacoes">

    <TextView
        android:text="@string/informacoes1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/txtInfo"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:id="@+id/txtVersion"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/version"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVersion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:id="@+id/txtUpdate"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/update"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUpdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:id="@+id/txtEmail"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/email"
        android:textColor="@android:color/black" />
</RelativeLayout>
