<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.course.leonil.prjecoponto.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imgBtnBuscar"
            android:layout_width="500dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:contentDescription="@string/contentDescriptionBuscar"
            android:elevation="10dp"
            app:srcCompat="@drawable/icons_pesquisar2" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/imgBtnInfo"
            android:layout_width="500dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/contentDescriptionInfor"
            android:elevation="10dp"
            app:srcCompat="@drawable/icons_information" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="50dp"></LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:text="@string/inicial_verde"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textAlignment="center" />

        <view
            android:layout_width="match_parent"
            class="android.support.v4.widget.Space"
            android:id="@+id/view4"
            android:layout_weight="1"
            android:layout_height="30dp" />

        <TextView
            android:text="@string/inicial_azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>
